--- a/index.html
+++ b/index.html
@@ -39,12 +39,40 @@
 </head>
 
 
-<body>
+<body class="font">
     <!--navbar e header con img-->
-    <header>
-        <nav>
+    <header class="header-bgcolor">
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li>test</li>
+                <li>test</li>
+                <li>test</li>
+                <li>test</li>
+            </ul>
 
+            <ul class="nav-list">
+                <li>test</li>
+                <li>test</li>
+                <li>test</li>
+                <li>test</li>
+            </ul>
         </nav>
+
+        <!--header titolo p e foto-->
+        <div class="container-centered-header-footer">
+            <h1>Titolone Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam</h1>
+            <div class="header-p-img">
+                <div class="header-p">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates consequatur, nemo ipsam illum necessitatibus rem laudantium cupiditate et nihil adipisci quos dolores dicta reprehenderit repudiandae. Excepturi odit laborum inventore?
+                    </p>
+                    <button>test</button>
+                    <span>test</span>
+                    <a href="">freccia</a>
+                </div>
+                <img src="https://picsum.photos/400/300" alt="">
+            </div>
+        </div>
 
     </header>
     <!--/navbar e header con img-->
@@ -52,6 +80,20 @@
 
     <!--main - business - faq-->
     <main>
+        <div class="container-centered-main">
+            <!--titolo e div checkbox-->
+            <h2>Titolo testestestestestestestsetset</h2>
+            <div class="checkbox">
+                <span>item+test</span>
+                <span>item+test</span>
+            </div>
+            <!--/titolo e div checkbox-->
+
+            
+
+
+
+        </div>
 
     </main>
     <!--/main - business - faq-->
