ended column part

--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@
             </div>
             <!--/titolo e div checkbox-->
 
+            
             <!--sezione 3 colonne-->
             <div class="columns">
+                <!--colonna1-->
                 <div class="bordo-colonna">
                     <div class="corpo-colonna">
                         <h2 class="utenti-centrato">test</h2>
@@ -130,12 +132,131 @@
                                 <h2>test</h2>
                                 <div class="riga-colonna">
                                     <span>&hearts;</span>
-                                    <span class="span-colonna-inf2">testtesttesttestasdfasdfadsfasdfasdfasdfasdfadf</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
                                 </div>
 
                                 <div class="riga-colonna">
                                     <span>&hearts;</span>
-                                    <span class="span-colonna-inf2">testtesttesttestasdfasdfadsfasdfasdfasdfasdfadf</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!--colonna2-->
+                <div class="bordo-colonna">
+                    <div class="corpo-colonna">
+                        <h2 class="utenti-centrato">test</h2>
+                        <div class="testo-colonna">
+                            <!--parte superiore-->
+                            <div class="colonna-sezione">
+                                <h2>Test</h2>
+                                <span>test</span>
+                                <span>test</span>
+                            </div>
+
+                            <!--parte centrale-->
+                            <div class="colonna-sezione">
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>test</span>
+                                </div>
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>test</span>
+                                </div>
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>test</span>
+                                </div>
+                            </div>
+
+                            <!--parte inferiore1-->
+                            <div class="colonna-sezione">
+                                <button>test</button>
+                                <span>test <a href="">test</a></span> 
+                            </div>
+                            <hr class="small-hr">
+
+                            <!--parte inferiore2-->
+                            <div class="colonna-sezione">
+                                <h2>test</h2>
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                </div>
+
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                </div>
+
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                </div>
+
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!--colonna 3-->
+                <div class="bordo-colonna">
+                    <div class="corpo-colonna">
+                        <h2 class="utenti-centrato">test</h2>
+                        <div class="testo-colonna">
+                            <!--parte superiore-->
+                            <div class="colonna-sezione">
+                                <h2>Test</h2>
+                                <span>test</span>
+                                <span>test</span>
+                            </div>
+
+                            <!--parte centrale-->
+                            <div class="colonna-sezione">
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>test</span>
+                                </div>
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>test</span>
+                                </div>
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>test</span>
+                                </div>
+                            </div>
+
+                            <!--parte inferiore1-->
+                            <div class="colonna-sezione">
+                                <button>test</button>
+                                <span>test <a href="">test</a></span> 
+                            </div>
+                            <hr class="small-hr">
+
+                            <!--parte inferiore2-->
+                            <div class="colonna-sezione">
+                                <h2>test</h2>
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                </div>
+
+                                <div class="riga-colonna">
+                                    <span>&hearts;</span>
+                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
                                 </div>
                             </div>
 
