ended section team

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <!--/titolo e div checkbox-->
 
-            
+
             <!--sezione 3 colonne-->
             <div class="columns">
                 <!--colonna1-->
@@ -266,7 +266,19 @@
                 </div>
             </div>
 
+            <!--sezione team-->
+            <div class="corpo-team">
+                <h2 class="utenti-centrato">test</h2>
+                <div class="riga-team">
+                    <div class="team-sezione">
+                        <h2>test</h2>
+                        <h3>test</h3>
+                        <p>test test test test test test test test test test test test test test test test test  test test test test test test test test test </p>
 
+                    </div>
+                    <button>test</button>
+                </div>
+            </div>
 
         </div>
 
