--- a/index.html
+++ b/index.html
@@ -265,6 +265,9 @@
                     </div>
                 </div>
             </div>
+            <!--/sezione 3 colonne-->
+
+
 
             <!--sezione team-->
             <div class="corpo-team">
@@ -279,6 +282,20 @@
                     <button>test</button>
                 </div>
             </div>
+            <!--/sezione team-->
+
+
+            <!--sezione img e paragrafo-->
+            <div class="img-paragrafo">
+                <img src="https://picsum.photos/400/300" alt="">
+                <div class="flex-paragrafo">
+                    <h2>test</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt corporis dolore veritatis dolor, consequatur totam eveniet nemo in rerum doloribus voluptas expedita omnis facilis, ea accusamus officia non! Porro, mollitia.</p>
+                    <button>test</button>
+                </div>
+            </div>
+
+
 
         </div>
 
