ended cards section

--- a/index.html
+++ b/index.html
@@ -294,9 +294,54 @@
                     <button>test</button>
                 </div>
             </div>
+            <!--/sezione img e paragrafo-->
 
 
+            <!--sezione business-->
+            <h2 class="titolo-business">test test test test</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="https://picsum.photos/150/150" alt="">
+                    <h3>test test test</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                </div>
 
+                <div class="card">
+                    <img src="https://picsum.photos/150/150" alt="">
+                    <h3>test test test</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                </div>
+
+                <div class="card">
+                    <img src="https://picsum.photos/150/150" alt="">
+                    <h3>test test test</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                </div>
+
+                <div class="card">
+                    <img src="https://picsum.photos/150/150" alt="">
+                    <h3>test test test</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                </div>
+
+                <div class="card">
+                    <img src="https://picsum.photos/150/150" alt="">
+                    <h3>test test test</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                </div>
+
+                <div class="card">
+                    <img src="https://picsum.photos/150/150" alt="">
+                    <h3>test test test</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                </div>
+
+            </div>
+            <!--/sezione business-->
+
+            <!--last top main-->
+            
+        
         </div>
 
     </main>
