--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </nav>
 
         <!--header titolo p e foto-->
-        <div class="container-centered-header-footer">
+        <div class="container-centered-header">
             <h1>Titolone Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam</h1>
             <div class="header-p-img">
                 <div class="header-p">
@@ -391,14 +391,185 @@
         <!--/parte partners-->
 
 
-        
+        <!--parte inferiore main-->
+           <div class="bg-lightblue">
+                <div class="flex-blue-section container-centered-footer">
+                    <h2>test test test test test test test</h2>
+                    <button>test</button>
+                </div>
+           </div>  
+
+           <!--faq-->
+           <div class="container-center-bottom-main">
+            <h2>test test</h2>
+                <div class="faqs">
+                    <div class="faq-row">
+                         <hr>
+                         <div class="celle-faq">
+                             <h3>test test test test</h3>
+                             <span>freccia</span>
+                         </div>
+                         <hr>
+                         <div class="celle-faq">
+                             <h3>test test test test</h3>
+                             <span>freccia</span>
+                         </div>
+                         <hr>
+                         <div class="celle-faq">
+                             <h3>test test test test</h3>
+                             <span>freccia</span>
+                         </div>
+                         <hr>
+                    </div>
+                
+                </div>
+            </div>
+            <!--/faqs-->
 
     </main>
     <!--/main - business - faq-->
 
 
     <!--links e language-->
-    <footer>
+    <footer class="footer-style">
+        <div class="container-centered-footer">
+           <!--lista verticale footer-->
+            <ul class="vertical-ul">
+                <!--lista orizzontale titolini-->
+                <li>
+                     <ul class="horizontal-ul">
+                        <li>
+                            <h2>test</h2>
+                        </li>
+                        <li>
+                            <h2>test</h2>
+                        </li>
+                        <li>
+                            <h2>test</h2>
+                        </li>
+                        <li>
+                            <h2>test</h2>
+                        </li>
+                        <li>
+                            <h2>test</h2>
+                        </li>
+                    </ul>
+
+                </li>
+
+                <!--lista orizzontale di liste verticali-->
+                <li>
+                    <ul class="horizontal-ul">
+                        <li>
+                            <ul class="vertical-ul-inner">
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="vertical-ul-inner">
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="vertical-ul-inner">
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="vertical-ul-inner">
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul class="vertical-ul-inner">
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                                <li>
+                                    <a href="">test</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+
+                <!--divisore-->
+                <li>
+                    <hr class="small-hr">
+                </li>
+
+                <!--language-->
+                <li>
+                    test
+                </li>
+            </ul>
+
+        </div>
 
     </footer>
     <!--/links e language-->
