navbar e started header checking alignment in navbar, button in header

--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
     <header class="header-bgcolor">
         <nav class="navbar">
             <ul class="nav-list">
-                <li>test</li>
-                <li>test</li>
-                <li>test</li>
-                <li>test</li>
+                <li><a href="index.html"><img src="img/logo-small.png" alt="logo"></a></li>
+                <li><a href="">Perchè Dropbox</a></li>
+                <li><a href="">Funzioni</a></li>
+                <li><a href="">Piani e Prezzi</a></li>
             </ul>
 
             <ul class="nav-list">
-                <li>test</li>
-                <li>test</li>
-                <li>test</li>
-                <li>test</li>
+                <li><a href="">Supporto</a></li>
+                <li><a href="">Contatta l'ufficio vendite</a></li>
+                <li><a href="">Accedi</a></li>
+                <li><a href=""></a><button class="btn btn-primary">Inizia</button></li>
             </ul>
         </nav>
 
         <!--header titolo p e foto-->
         <div class="container-centered-header">
-            <h1>Titolone Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam</h1>
+            <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             <div class="header-p-img">
                 <div class="header-p">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates consequatur, nemo ipsam illum necessitatibus rem laudantium cupiditate et nihil adipisci quos dolores dicta reprehenderit repudiandae. Excepturi odit laborum inventore?
+                        Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dopbox Business è piùù di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                     </p>
-                    <button>test</button>
+                    <button class="btn btn-primary">Inizia la tua prova gratuita</button>
                     <span>test</span>
                     <a href="">freccia</a>
                 </div>
@@ -117,7 +117,7 @@
                                 </div>
                                 <div class="riga-colonna">
                                     <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span>test test test test test test test testtest</span>
                                 </div>
                             </div>
 
