--- a/index.html
+++ b/index.html
@@ -66,11 +66,18 @@
                     <p>
                         Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dopbox Business è piùù di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
                     </p>
-                    <button class="btn btn-primary">Inizia la tua prova gratuita</button>
-                    <span>test</span>
-                    <a href="">freccia</a>
+                    <div>
+                        <button class="btn btn-primary">Inizia la tua prova gratuita</button>
+                    </div>
+                    <span>Annulla in qualsiasi momento</span>
+                    <div>
+                        <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+                    </div>
+                    
                 </div>
-                <img src="https://picsum.photos/400/300" alt="">
+                <div class="header-img">
+                    <img src="img/jumbo.png" alt="jumbo">
+                </div>
             </div>
         </div>
 
