--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <!--parte superiore del main-->
         <div class="container-centered-main">
             <!--titolo e div checkbox-->
-            <h2>Titolo testestestestestestestsetset</h2>
+            <h2>Trova il piano busines che fa per te</h2>
             <div class="checkbox">
-                <span>item+test</span>
-                <span>item+test</span>
+                <span><input type="checkbox"> Fatturazione mensile </span>
+                <span><input type="checkbox"> Fatturazione annuale </span>
             </div>
             <!--/titolo e div checkbox-->
 
@@ -103,49 +103,49 @@
                 <!--colonna1-->
                 <div class="bordo-colonna">
                     <div class="corpo-colonna">
-                        <h2 class="utenti-centrato">test</h2>
+                        <h2 class="utenti-centrato titolino-colonna"><i class="fa-solid fa-user"></i> Singolo</h2>
                         <div class="testo-colonna">
                             <!--parte superiore-->
                             <div class="colonna-sezione">
-                                <h2>Test</h2>
-                                <span>test</span>
-                                <span>test</span>
+                                <h2>Professional</h2>
+                                <b>&euro; 12.00</b>
+                                <span>/mese</span>
                             </div>
 
                             <!--parte centrale-->
                             <div class="colonna-sezione">
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-user"></i></span>
+                                    <span>1 utente</span>
                                 </div>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-folder"></i></span>
+                                    <span> 5 TB di spazio di archiviazione sicuro</span>
                                 </div>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test test test test test test test testtest</span>
+                                    <span><i class="fa-solid fa-share-nodes"></i></span>
+                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                                 </div>
                             </div>
 
                             <!--parte inferiore1-->
                             <div class="colonna-sezione">
-                                <button>test</button>
-                                <span>test <a href="">test</a></span> 
+                                <button class="btn btn-primary">Prova gratis per 30 giorni</button>
+                                <span>oppure <a href="">acquista ora</a></span> 
                             </div>
                             <hr class="small-hr">
 
                             <!--parte inferiore2-->
                             <div class="colonna-sezione">
-                                <h2>test</h2>
+                                <h3>Punti Salienti del piano</h3>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Invia file fino a 100GB con Dropbox Transfert</span>
                                 </div>
 
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Cartelle offline su dispositivi mobili</span>
                                 </div>
                             </div>
 
@@ -157,59 +157,64 @@
                 <!--colonna2-->
                 <div class="bordo-colonna">
                     <div class="corpo-colonna">
-                        <h2 class="utenti-centrato">test</h2>
+                        <h2 class="utenti-centrato titolino-colonna"> <i class="fa-solid fa-users"></i>Team</h2>
                         <div class="testo-colonna">
                             <!--parte superiore-->
                             <div class="colonna-sezione">
-                                <h2>Test</h2>
-                                <span>test</span>
-                                <span>test</span>
+                                <h2>Advanced</h2>
+                                <b>&euro; 18.00</b>
+                                <span>/utente/mese</span>
                             </div>
 
                             <!--parte centrale-->
                             <div class="colonna-sezione">
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-users"></i></span>
+                                    <span>3 o più utenti</span>
                                 </div>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-folder"></i></span>
+                                    <span>Tutto lo spazio di cui ha bisogno il tuo team</span>
                                 </div>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-share-nodes"></i></span>
+                                    <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span>
                                 </div>
                             </div>
 
                             <!--parte inferiore1-->
                             <div class="colonna-sezione">
-                                <button>test</button>
-                                <span>test <a href="">test</a></span> 
+                                <button class="btn btn-primary">Prova gratis per 30 giorni</button>
+                                <span>oppure <a href="">acquista ora</a></span> 
                             </div>
                             <hr class="small-hr">
 
                             <!--parte inferiore2-->
                             <div class="colonna-sezione">
-                                <h2>test</h2>
+                                <h3>Punti Salienti del piano</h3>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Nessun limite di spazio per i file</span>
                                 </div>
 
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Cartelle offline su dispositivi mobili</span>
                                 </div>
 
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Risparmio del 50% rispetto alle iscrizioni singole</span>
                                 </div>
 
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Possibilità di inserire nuovi membri del team</span>
+                                </div>
+
+                                <div class="riga-colonna">
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Gestione dei permessi in base ai ruoli</span>
                                 </div>
 
                             </div>
@@ -222,49 +227,54 @@
                 <!--colonna 3-->
                 <div class="bordo-colonna">
                     <div class="corpo-colonna">
-                        <h2 class="utenti-centrato">test</h2>
+                        <h2 class="utenti-centrato titolino-colonna"><i class="fa-solid fa-building"></i> Azienda</h2>
                         <div class="testo-colonna">
                             <!--parte superiore-->
                             <div class="colonna-sezione">
-                                <h2>Test</h2>
-                                <span>test</span>
-                                <span>test</span>
+                                <h2>Enterprise</h2>
+                                <b>Contattaci</b>
+                                <div class="errore-grave"></div>
                             </div>
 
                             <!--parte centrale-->
                             <div class="colonna-sezione">
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-user"></i></span>
+                                    <span>10 o più utenti</span>
                                 </div>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-folder"></i></span>
+                                    <span>Soluzioni personalizzabili per la tua azienda</span>
                                 </div>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>test</span>
+                                    <span><i class="fa-solid fa-share-nodes"></i></span>
+                                    <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>
                                 </div>
                             </div>
 
-                            <!--parte inferiore1-->
-                            <div class="colonna-sezione">
-                                <button>test</button>
-                                <span>test <a href="">test</a></span> 
+                              <!--parte inferiore1-->
+                              <div class="colonna-sezione">
+                                <button class="btn btn-primary">Contattaci</button>
+                                <span>oppure <a href="">acquista ora</a></span> 
                             </div>
                             <hr class="small-hr">
 
                             <!--parte inferiore2-->
                             <div class="colonna-sezione">
-                                <h2>test</h2>
+                                <h3>Punti Salienti del piano</h3>
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Cartelle offline su dispositivi mobili</span>
                                 </div>
 
                                 <div class="riga-colonna">
-                                    <span>&hearts;</span>
-                                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad accusamus molestias debitis nemo ea nesciunt .</span>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Servizio assistenza24/h</span>
+                                </div>
+
+                                <div class="riga-colonna">
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Possibilità di personalizzazione totale</span>
                                 </div>
                             </div>
 
