ended sezione team

--- a/index.html
+++ b/index.html
@@ -289,15 +289,19 @@
 
             <!--sezione team-->
             <div class="corpo-team">
-                <h2 class="utenti-centrato">test</h2>
+                <h2 class="utenti-centrato titolino-colonna"><i class="fa-solid fa-building"></i> Team</h2>
                 <div class="riga-team">
                     <div class="team-sezione">
-                        <h2>test</h2>
-                        <h3>test</h3>
-                        <p>test test test test test test test test test test test test test test test test test  test test test test test test test test test </p>
+                        <div class="team-sezione-inner">
+                            <h2>Enterprise</h2>
+                            <h3>Contatta l'ufficio vendite per i prezzi</h3>
+                        </div>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala. </p>
 
                     </div>
-                    <button>test</button>
+                    <div class="container-btn-team">
+                        <button class="btn btn-primary">Contatta l'ufficio vendite</button>
+                    </div>
                 </div>
             </div>
             <!--/sezione team-->
