ended img-paragrafo

--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
 
             <!--sezione img e paragrafo-->
             <div class="img-paragrafo">
-                <img src="https://picsum.photos/400/300" alt="">
+                <img src="img/partner.png" alt="img">
                 <div class="flex-paragrafo">
-                    <h2>test</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt corporis dolore veritatis dolor, consequatur totam eveniet nemo in rerum doloribus voluptas expedita omnis facilis, ea accusamus officia non! Porro, mollitia.</p>
-                    <button>test</button>
+                    <h2>Entra in contatto con un partner Dropbox</h2>
+                    <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <button class="btn btn-secondary">Trova un partner</button>
                 </div>
             </div>
             <!--/sezione img e paragrafo-->
