ended top main starting partners part

--- a/index.html
+++ b/index.html
@@ -320,50 +320,50 @@
 
 
             <!--sezione business-->
-            <h2 class="titolo-business">test test test test</h2>
+            <h2 class="titolo-business">Esegui più operazioni con Dropbox Business</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="https://picsum.photos/150/150" alt="">
-                    <h3>test test test</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                    <img src="img/business-feature-switching-tools.png" alt="img">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiano con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://picsum.photos/150/150" alt="">
-                    <h3>test test test</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                    <img src="img/business-feature-send-files-it.png" alt="img">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiano con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://picsum.photos/150/150" alt="">
-                    <h3>test test test</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                    <img src="img/business-feature-coordinate-it.png" alt="img">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiano con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://picsum.photos/150/150" alt="">
-                    <h3>test test test</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                    <img src="img/business-feature-integrations-it.png" alt="img">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiano con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://picsum.photos/150/150" alt="">
-                    <h3>test test test</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                    <img src="img/business-feature-multi-device.png" alt="img">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiano con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
 
                 <div class="card">
-                    <img src="https://picsum.photos/150/150" alt="">
-                    <h3>test test test</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quibusdam provident consequuntur explicabo fugiat excepturi aut minus, officiis soluta animi, est doloremque. Ipsa laboriosam dignissimos officia nam voluptas nobis asperiores?</p>
+                    <img src="img/business-feature-security.png" alt="img">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiano con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
 
             </div>
             <!--/sezione business-->
 
             <!--last top main-->
-            <h2 class="titolo-endtop-main">test test test test test test test test</h2>
-            <a href="" class="margin-bottom-endtop">test test test test</a>
+            <h2 class="titolo-endtop-main">Più di 500.000 team utilizzano Dropbox Business</h2>
+            <a href="" class="margin-bottom-endtop">Scopri di più sui nostri clienti</a>
         </div>
         <!--/parte superiore del main-->
 
