--- a/index.html
+++ b/index.html
@@ -371,17 +371,17 @@
         <div class="container-partners">
            <!--partners1-->
             <div class="partners">
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="designit">
+                    <img src="img/designit.svg" alt="logo">
                 </div>
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="asu">
+                    <img src="img/arizona_state_university.svg" alt="logo">
                 </div>
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="uf">
+                    <img src="img/university_of_florida.svg" alt="logo">
                 </div>
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="topps">
+                    <img src="img/topps.svg" alt="logo">
                 </div>
             </div>
 
@@ -395,17 +395,17 @@
 
             <!--partners2-->
             <div class="partners">
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="worldbr">
+                    <img src="img/world_bicycle_relief.svg" alt="logo">
                 </div>
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="hearst">
+                    <img src="img/hearst_corp.svg" alt="logo">
                 </div>
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="lonelyplanet">
+                    <img src="img/lonely_planet.svg" alt="logo">
                 </div>
-                <div class="single-partner">
-                    <img src="https://picsum.photos/150/150" alt="">
+                <div class="single-partner" id="ccoutdoor">
+                    <img src="img/clear_channel.svg" alt="logo">
                 </div>
             </div>
         </div>
