ended partners logos

--- a/index.html
+++ b/index.html
@@ -387,10 +387,10 @@
 
             <!--descrizione centrale-->
             <div class="descrizione-partner">
-                <img src="https://picsum.photos/20/10" alt="">
+                <img src="img/designit.svg" alt="logo">
                 <hr class="small-hr">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel magni culpa tempora deserunt distinctio aut aperiam? Natus deleniti dolorum illum suscipit doloribus, et, alias autem fugiat, incidunt quas commodi.</p>
-                <span>test test test test</span>
+                <span>Morten Thomsen, Global IT lead</span>
             </div>
 
             <!--partners2-->
